--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 const GAS_API_URL = 'https://script.google.com/macros/s/AKfycbykD87A-5V5WvRMcGQxFYUZtjcaMWWUC6GjoiMZsmfyw9E6mOc8Y5EY6vZ1jxcJUNEKAg/exec';
                 
                 // 請在此填入新的 LIFF ID (因為網域換了，需要在 LINE Developer Console 重新確認)
-                const LIFF_ID = "您的_NEW_LIFF_ID"; 
+                const LIFF_ID = "Ub65d7515bbad018a5737d5c9632acaaf"; 
 
                 const orders = ref({});
                 const isLoading = ref(false);
