--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 // ⚠️ 請修正這裡！填入正確的 LIFF ID
                 // 格式範例: "1657xxxxxx-AbCxxxxx"
                 // ==========================================
-                const LIFF_ID = "請在此填入正確的LIFF_ID"; 
+                const LIFF_ID = "2008639782-x840YeZq"; 
                 const GAS_API_URL = 'https://script.google.com/macros/s/AKfycbykD87A-5V5WvRMcGQxFYUZtjcaMWWUC6GjoiMZsmfyw9E6mOc8Y5EY6vZ1jxcJUNEKAg/exec';
 
                 const orders = ref({});
